# biasbuster

./: .gitignore  CLAUDE.md  DGXSPARK.md  Modelfile  OLLAMA_MODELCARD_README.md  README.md  TRAINING.md  TRAINING_INTERPRETATION.md  __init__.py  annotate_single_paper.py  backfill_cochrane_domains.py  biasbuster_next_session.md  compare_vs_cochrane.py  config.example.py  database.py  diagnose_v5a_disagreements.py  expert_rob_alignment_of_annotations.py  export.py  fix_v7_parsing_bug_output.py  flag_review_candidates.py  lora2ollama.sh  main.py  migrate_jsonl_to_sqlite.py  ollamazip.py  pipeline.py  prompts.py  pyproject.toml  reprocess_rob.py  run_merge.sh  run_merge_mlx.sh  run_training.sh  run_training_mlx.sh  run_v5a_eval.sh  run_v5a_validation.sh  seed_database.py  seed_export.py  train_and_evaluate.sh
agent/: __init__.py  agent_config.py  model_client.py  runner.py  tool_router.py  tools.py  verification_planner.py
annotators/: __init__.py  llm_prelabel.py  openai_compat.py
biasbuster/: assessment_agent.py  assessment_agent_enforcement.py  assessment_agent_tools.py  assessment_decomposed.py  database.py  pipeline.py  prompts.py  prompts_v3.py  prompts_v4.py  prompts_v5a.py
cli/: __init__.py  analysis.py  content.py  main.py  pdf_extract.py  settings.py  verification.py
collectors/: clinicaltrials_gov.py  cochrane_rob.py  outcome_matching.py  pubmed_xml.py  retraction_watch.py  spin_detector.py
crowd/: __init__.py  __main__.py  analysis.py  app.py  auth.py  export_to_crowd.py  import_gold_standard.py
dataset/: cochrane_fulltext_probe.csv  cochrane_pubtype_audit.csv  phase1_fidelity_audit.md  quadas2_expert_set.txt  quadas2_fulltext_coverage.csv  rob2_deng2024_expert_set.txt
docs/: ANNOTATED_DATA_SET.md  ANNOTATION_JSON_SPEC.md  ASSESSING_RISK_OF_BIAS.md  BIASBUSTER_CLI.md  EXTRACTING_EXPERT_RATINGS.md  HOWTO-GPT-OSS.md  HOWTO_FINETUNE_GPT_OSS20B.md  MISTAKES_ROUND_1_AND_FIXES.md  MISTAKES_TO_ROUND_3.md  MLX_TRAINING.md  MODEL_CARD.md  OPTIMISING_FOR_ROUND_5.md  PREPARING_ROUND_4.md  ROUND_2_PREPARATIONS.md  ROUND_3.md  ROUND_4.md  ROUND_5.md  SEED_DATA_SET.md
enrichers/: author_coi.py  effect_size_auditor.py  funding_checker.py  retraction_classifier.py
evaluation/: harness.py  run.py  scorer.py  selftest.py
gui/: __init__.py  (+8 more)
(+288 files in other folders)
