[project]
name = "biasbuster"
version = "0.1.0"
description = "Toolkit for building curated training datasets to fine-tune LLMs for detecting bias in biomedical abstracts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pandas",
    "tqdm",
    "anthropic",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
